<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboarding.OnboardingFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_end="8dp" />

        <ImageView
            android:id="@+id/onBoardingIV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/onboarding_image"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/onboardingTitleTV"
            app:layout_constraintHeight_percent="0.4" />

        <TextView
            android:id="@+id/onboardingTitleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_to_hobby_tracker"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onBoardingIV" />

        <TextView
            android:id="@+id/onBoardingDescriptionTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hobby_tracker_onboarding_description"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onboardingTitleTV" />

        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/let_s_get_started"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onBoardingDescriptionTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>