<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hobby"
            type="com.example.hobbytracker.data.local.entities.Hobby" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.hobby_update.HobbyUpdateFragment">

        <EditText
            android:id="@+id/hobbyUpdateTitleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:hint="@string/hobby_title"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{hobby.title}"/>

        <EditText
            android:id="@+id/hobbyUpdateDescriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:hint="@string/description"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hobbyUpdateTitleET"
            android:text="@{hobby.description}"/>

        <View
            android:id="@+id/hobbyUpdateDateView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/picker_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hobbyUpdateDescriptionET" />

        <Button
            android:id="@+id/hobbyUpdateSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hobbyUpdateTimeView" />

        <View
            android:id="@+id/hobbyUpdateTimeView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/picker_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hobbyUpdateDateView" />

        <TextView
            android:id="@+id/hobbyUpdateTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/time"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/hobbyUpdateTimeView"
            app:layout_constraintStart_toStartOf="@+id/hobbyUpdateTimeView"
            app:layout_constraintTop_toTopOf="@+id/hobbyUpdateTimeView"
            android:text="@{hobby.timeFormatted}"/>

        <TextView
            android:id="@+id/hobbyUpdateDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/date"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/hobbyUpdateDateView"
            app:layout_constraintStart_toStartOf="@+id/hobbyUpdateDateView"
            app:layout_constraintTop_toTopOf="@+id/hobbyUpdateDateView"
            android:text="@{hobby.dateFormatted}"/>

        <ProgressBar
            android:id="@+id/hobbyUpdateProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black"
            android:scaleX="2.5"
            android:scaleY="2.5"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/loadingUpdateScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#825E5E5E"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/updatedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/hobbyUpdateSaveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hobbyUpdateTimeView"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>